Add run information